k8s-cnat-api-gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cnat-api-gateway-svc
  namespace: cnat
spec:
  selector:
    app: cnat-api-gateway
  ports:
    - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnat-api-gateway-deploy
  namespace: cnat
  labels:
    app: cnat-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnat-api-gateway
  template:
    metadata:
      labels:
        app: cnat-api-gateway
    spec:
      containers:
        - name: some-cnat-api-gateway
          image: cnat-api-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
