k8s-cnat-kafka.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cnat-kafka-svc
  namespace: cnat
spec:
  selector:
    app: cnat-kafka
  ports:
    - protocol: TCP
      port: 9092

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnat-kafka-deployment
  namespace: cnat
  labels:
    app: cnat-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnat-kafka
  template:
    metadata:
      labels:
        app: cnat-kafka
    spec:
      containers:
        - name: some-cnat-kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
