k8s-cnat-tracker-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cnat-tracker-db-svc
  namespace: cnat
spec:
  clusterIP: None
  selector:
    app: cnat-tracker-db
  ports:
    - port: 27017

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cnat-tracker-db-statefulset
  namespace: cnat
spec:
  selector:
    matchLabels:
      app: cnat-tracker-db
  replicas: 1
  template:
    metadata:
      labels:
        app: cnat-tracker-db
    spec:
      containers:
        - name: some-mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: cnat-tracker-db-pvc
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: cnat-tracker-db-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
