k8s-cnat-tracker-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cnat-tracker-service-svc
  namespace: cnat
spec:
  selector:
    app: cnat-tracker-service
  ports:
    - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnat-tracker-service-deploy
  namespace: cnat
  labels:
    app: cnat-tracker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnat-tracker-service
  template:
    metadata:
      labels:
        app: cnat-tracker-service
    spec:
      containers:
        - name: some-cnat-tracker-service
          image: cnat-tracker-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
