k8s-cnat-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnat-user-service-ip-cluster
  namespace: cnat
spec:
  selector:
    app: cnat-user-service
  ports:
  - protocol: TCP
    port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnat-user-service-deployment
  namespace: cnat
  labels:
    app: cnat-user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnat-user-service
  template:
    metadata:
      labels:
        app: cnat-user-service
    spec:
      containers:
      - name: some-cnat-user-service
        image: cnat-user-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---
