k8s-cnat-web-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cnat-web-app-svc
  namespace: cnat
spec:
  selector:
    app: cnat-web-app
  ports:
    - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnat-web-app-deploy
  namespace: cnat
  labels:
    app: cnat-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnat-web-app
  template:
    metadata:
      labels:
        app: cnat-web-app
    spec:
      containers:
        - name: some-cnat-web-app
          image: cnat-web-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
