k8s-cnat-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnat-zookeeper-ip-cluster
  namespace: cnat
spec:
  selector:
    app: cnat-zookeeper
  ports:
  - protocol: TCP
    port: 2181

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnat-zookeeper-deployment
  namespace: cnat
  labels:
    app: cnat-zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnat-zookeeper
  template:
    metadata:
      labels:
        app: cnat-zookeeper
    spec:
      containers:
      - name: some-cnat-zookeeper
        image: bitnami/zookeeper:latest
        ports:
        - containerPort: 2181

---
